additional output formatting

--- a/3_Graphs_Tables/make_tables.ipynb
+++ b/3_Graphs_Tables/make_tables.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "f251f104",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "cdd7c68a",
    "metadata": {},
    "outputs": [],
@@ -41,14 +41,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e72907dd",
+   "id": "b2cffa09",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# want header - title - table_header - tabular - table_footer - caption\n",
+    "\n",
+    "supp_mat_table = {\n",
+    "    \"header\": r\"\\paragraph*{S Table.}{\\bf\",\n",
+    "    \"table_header\":\n",
+    "r\"\"\"}\n",
+    "\\label{S-Table.}\n",
+    "\\begin{table}[!ht]\n",
+    "\\centering\"\"\",\n",
+    "    \"table_footer\": r\"\"\"\\end{table}\"\"\"\n",
+    "}"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
+   "id": "95b2fc7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def built_supp_mat_table(title, tabular, caption):\n",
+    "    tabular = tabular.replace(r\"\\\\\", r\"\\\\ \\hline\")\n",
+    "    to_repl = [r'\\toprule', r'\\midrule', r'\\bottomrule']\n",
+    "    for s in to_repl:\n",
+    "        tabular = tabular.replace(s, \"\")\n",
+    "    return supp_mat_table[\"header\"] + title + supp_mat_table[\"table_header\"] + tabular + supp_mat_table[\"table_footer\"] + caption"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9adf155b",
    "metadata": {},
    "outputs": [],
@@ -79,33 +106,16 @@
     "        column_format=\"|l|r|r|r|r|r|r|r|r|\",      # LaTeX alignment (1 left + 8 right)\n",
     "        #caption=f\"{SUBREDDIT_LABELS[subreddit]} tuned thread start LightGBM hyperparameters by number of features.\",\n",
     "        #label=f\"tab:s1-{subreddit}-hyperparams\",\n",
-    "        escape=False                    # so underscores in col names are not escaped weirdly\n",
+    "        escape=True                    # so underscores in col names are not escaped weirdly\n",
     "    )\n",
-    "    latex_str = latex_str.replace(r\"\\\\\", r\"\\\\ \\hline\")\n",
-    "    to_repl = [r'\\toprule', r'\\midrule', r'\\bottomrule']\n",
-    "    for s in to_repl:\n",
-    "        latex_str = latex_str.replace(s, \"\")\n",
+    "    \n",
     "    caption = f\"Optimal LightGBM tree hyperparameters selected via cross-validated Optuna/TPE search for each number of features for {SUBREDDIT_LABELS[subreddit]}. Values represent cross-fold aggregated hyperparameters, using the mode for integer parameters and the mean for continuous parameters. These configurations were used for the final thread start model evaluation.\"\n",
-    "    full_latex = (r\"\\paragraph*{S Table.}{\\bf \" +\n",
-    "    f\"{subreddit} tuned thread start LightGBM hyperparameters by number of features.\" +\n",
-    "    r\"\"\"}\n",
-    "    \\label{S-Table.}\n",
-    "    \\begin{table}[!ht]\n",
-    "        \\centering\"\"\" + latex_str + r\"\"\"\n",
-    "    \\end{table}\n",
-    "    \"\"\" + caption)\n",
+    "    title = f\"{subreddit} tuned thread start LightGBM hyperparameters by number of features.\"\n",
+    "    full_latex = built_supp_mat_table(title, latex_str, caption)\n",
     "    # Save to file\n",
     "    with open(f\"/home/cara/Documents/reddit_analyses/thread-size/Publication_Outputs/1_Thread_Start/hyperparam_outputs/{subreddit}.txt\", \"w\") as f:\n",
-    "        f.write(full_latex)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "eb4dffc1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        f.write(full_latex)\n",
+    "\n",
     "outfile = f\"/home/cara/Documents/reddit_analyses/thread-size/Publication_Outputs/1_Thread_Start/hyperparam_outputs/hyperparams.xlsx\"\n",
     "with pd.ExcelWriter(outfile) as writer:\n",
     "    for sub, df in hyperparam_dfs.items():\n",
@@ -114,11 +124,385 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "8eb4308d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Unnamed: 1</th>\n",
+       "      <th>Key</th>\n",
+       "      <th>Value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>n_feats</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>MCC_before_thresh</td>\n",
+       "      <td>0.061094</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>final_threshold</td>\n",
+       "      <td>0.642757</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>MCC_after_thresh</td>\n",
+       "      <td>0.102834</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "      <td>final_class_weights</td>\n",
+       "      <td>{0: np.float64(1.0), 1: np.float64(1.752410111...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>MCC_after_thresh</td>\n",
+       "      <td>0.27879</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "      <td>final_class_weights</td>\n",
+       "      <td>{0: np.float64(1.449421193232413), 1: np.float...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5</td>\n",
+       "      <td>features</td>\n",
+       "      <td>['author_freq', 'question_ratio', 'domain_freq...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6</td>\n",
+       "      <td>best_MCC</td>\n",
+       "      <td>0.369864</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7</td>\n",
+       "      <td>model_threshold</td>\n",
+       "      <td>0.536131</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>200 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Unnamed: 0  Unnamed: 1                  Key  \\\n",
+       "0           1.0           0              n_feats   \n",
+       "1           NaN           1    MCC_before_thresh   \n",
+       "2           NaN           2      final_threshold   \n",
+       "3           NaN           3     MCC_after_thresh   \n",
+       "4           NaN           4  final_class_weights   \n",
+       "..          ...         ...                  ...   \n",
+       "195         NaN           3     MCC_after_thresh   \n",
+       "196         NaN           4  final_class_weights   \n",
+       "197         NaN           5             features   \n",
+       "198         NaN           6             best_MCC   \n",
+       "199         NaN           7      model_threshold   \n",
+       "\n",
+       "                                                 Value  \n",
+       "0                                                    1  \n",
+       "1                                             0.061094  \n",
+       "2                                             0.642757  \n",
+       "3                                             0.102834  \n",
+       "4    {0: np.float64(1.0), 1: np.float64(1.752410111...  \n",
+       "..                                                 ...  \n",
+       "195                                            0.27879  \n",
+       "196  {0: np.float64(1.449421193232413), 1: np.float...  \n",
+       "197  ['author_freq', 'question_ratio', 'domain_freq...  \n",
+       "198                                           0.369864  \n",
+       "199                                           0.536131  \n",
+       "\n",
+       "[200 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "eb4dffc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_threshold_dfs = {}\n",
+    "sheet_name = \"all_params\"\n",
+    "for subreddit in SUBREDDIT_LABELS:\n",
+    "    eval_filepath = f\"/home/cara/Documents/reddit_analyses/thread-size/Outputs/1_thread_start/{subreddit}/4_model/evaluation.xlsx\"\n",
+    "    df = pd.read_excel(eval_filepath, sheet_name=sheet_name)\n",
+    "    \n",
+    "    # Ensure correct column names\n",
+    "    df.columns = [\"Features\", \"param_index\", \"Parameter\", \"Value\"]\n",
+    "\n",
+    "    # Forward-fill N_feats to propagate block identifiers\n",
+    "    df[\"Features\"] = df[\"Features\"].ffill().astype(int)\n",
+    "\n",
+    "    # Pivot into the desired wide format\n",
+    "    table = df.pivot(index=\"Features\", columns=\"Parameter\", values=\"Value\")\n",
+    "\n",
+    "    model_threshold_dfs[subreddit] = table.copy()[['model_threshold']]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "23bcd5a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.concat(model_threshold_dfs, axis=1).to_csv(f\"/home/cara/Documents/reddit_analyses/thread-size/Publication_Outputs/1_Thread_Start/metrics/model_thresholds.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "2d175753",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Parameter</th>\n",
+       "      <th>model_threshold</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Features</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.412345</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.393197</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.426633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.502143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.43905</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.462475</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.399566</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.416296</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.463276</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>0.421228</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0.472305</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>0.470663</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>0.439738</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>0.472551</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>0.441527</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>0.488196</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>0.461812</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>0.466459</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>0.449536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>0.474811</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>0.464367</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>0.422711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>0.49352</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>0.487613</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>0.501093</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Parameter model_threshold\n",
+       "Features                 \n",
+       "1                0.412345\n",
+       "2                0.393197\n",
+       "3                0.426633\n",
+       "4                0.502143\n",
+       "5                 0.43905\n",
+       "6                0.462475\n",
+       "7                0.399566\n",
+       "8                0.416296\n",
+       "9                0.463276\n",
+       "10               0.421228\n",
+       "11               0.472305\n",
+       "12               0.470663\n",
+       "13               0.439738\n",
+       "14               0.472551\n",
+       "15               0.441527\n",
+       "16               0.488196\n",
+       "17               0.461812\n",
+       "18               0.466459\n",
+       "19               0.449536\n",
+       "20               0.474811\n",
+       "21               0.464367\n",
+       "22               0.422711\n",
+       "23                0.49352\n",
+       "24               0.487613\n",
+       "25               0.501093"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table[['model_threshold']]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "90b999a1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "outfile = f\"/home/cara/Documents/reddit_analyses/thread-size/Publication_Outputs/1_Thread_Start/hyperparam_outputs/hyperparams.xlsx\"\n",
+    "with pd.ExcelWriter(outfile) as writer:\n",
+    "    for sub, df in hyperparam_dfs.items():\n",
+    "        df.to_excel(writer, sheet_name=sub)"
+   ]
   }
  ],
  "metadata": {
