made paths relative

--- a/3_Graphs_Tables/make_tables.ipynb
+++ b/3_Graphs_Tables/make_tables.ipynb
@@ -52,19 +52,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
    "id": "b2cffa09",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1136838261.py, line 14)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[58]\u001b[39m\u001b[32m, line 14\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31m\"footer\":\u001b[39m\n            ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# want header - title - table_header - tabular - table_footer - caption - footer\n",
     "\n",
@@ -78,7 +69,7 @@
     "    \"table_footer\":\n",
     "r\"\"\"\n",
     "\\end{table}\n",
-    "\"\"\"\n",
+    "\"\"\",\n",
     "    \"footer\":\n",
     "r\"\"\"\n",
     "\\FloatBarrier\n",
@@ -111,7 +102,7 @@
     "hyperparam_dfs = {}\n",
     "sheet_name = \"all_hyperparams\"\n",
     "for subreddit in SUBREDDIT_LABELS:\n",
-    "    eval_filepath = f\"/home/cara/Documents/reddit_analyses/thread-size/Outputs/1_thread_start/{subreddit}/4_model/evaluation.xlsx\"\n",
+    "    eval_filepath = f\"../../Outputs/1_thread_start/{subreddit}/4_model/evaluation.xlsx\"\n",
     "    df = pd.read_excel(eval_filepath, sheet_name=sheet_name)\n",
     "    \n",
     "    # Ensure correct column names\n",
@@ -141,10 +132,10 @@
     "    title = f\"{subreddit} tuned thread start LightGBM hyperparameters by number of features.\"\n",
     "    full_latex = built_supp_mat_table(title, latex_str, caption)\n",
     "    # Save to file\n",
-    "    with open(f\"/home/cara/Documents/reddit_analyses/thread-size/Publication_Outputs/1_Thread_Start/hyperparam_outputs/{subreddit}.txt\", \"w\") as f:\n",
+    "    with open(f\"../../Publication_Outputs/1_Thread_Start/hyperparam_outputs/{subreddit}.txt\", \"w\") as f:\n",
     "        f.write(full_latex)\n",
     "\n",
-    "outfile = f\"/home/cara/Documents/reddit_analyses/thread-size/Publication_Outputs/1_Thread_Start/hyperparam_outputs/hyperparams.xlsx\"\n",
+    "outfile = f\"../../Publication_Outputs/1_Thread_Start/hyperparam_outputs/hyperparams.xlsx\"\n",
     "with pd.ExcelWriter(outfile) as writer:\n",
     "    for sub, df in hyperparam_dfs.items():\n",
     "        df.to_excel(writer, sheet_name=sub)\n"
@@ -152,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "eb4dffc1",
    "metadata": {},
    "outputs": [],
@@ -160,7 +151,7 @@
     "model_threshold_dfs = {}\n",
     "sheet_name = \"all_params\"\n",
     "for subreddit in SUBREDDIT_LABELS:\n",
-    "    eval_filepath = f\"/home/cara/Documents/reddit_analyses/thread-size/Outputs/1_thread_start/{subreddit}/4_model/evaluation.xlsx\"\n",
+    "    eval_filepath = f\"../../Outputs/1_thread_start/{subreddit}/4_model/evaluation.xlsx\"\n",
     "    df = pd.read_excel(eval_filepath, sheet_name=sheet_name)\n",
     "    \n",
     "    # Ensure correct column names\n",
@@ -177,12 +168,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "23bcd5a8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.concat(model_threshold_dfs, axis=1).to_csv(f\"/home/cara/Documents/reddit_analyses/thread-size/Publication_Outputs/1_Thread_Start/metrics/model_thresholds.xlsx\")"
+    "pd.concat(model_threshold_dfs, axis=1).to_csv(f\"../../Publication_Outputs/1_Thread_Start/metrics/model_thresholds.xlsx\")"
    ]
   },
   {
@@ -193,7 +184,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "outfile = f\"/home/cara/Documents/reddit_analyses/thread-size/Publication_Outputs/1_Thread_Start/hyperparam_outputs/hyperparams.xlsx\"\n",
+    "outfile = f\"../../Publication_Outputs/1_Thread_Start/hyperparam_outputs/hyperparams.xlsx\"\n",
     "with pd.ExcelWriter(outfile) as writer:\n",
     "    for sub, df in hyperparam_dfs.items():\n",
     "        df.to_excel(writer, sheet_name=sub)"
@@ -201,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "5ce70b23",
    "metadata": {},
    "outputs": [],
@@ -209,7 +200,7 @@
     "s2_cw_dfs = {}\n",
     "sheet_name = \"params\"\n",
     "for subreddit in SUBREDDIT_LABELS:\n",
-    "    eval_filepath = f\"/home/cara/Documents/reddit_analyses/thread-size/Outputs/2_thread_size/{subreddit}/2_tuning/tuning_outputs.xlsx\"\n",
+    "    eval_filepath = f\"../../Outputs/2_thread_size/{subreddit}/2_tuning/tuning_outputs.xlsx\"\n",
     "    df = pd.read_excel(eval_filepath, sheet_name=sheet_name)\n",
     "    \n",
     "    # Ensure correct column names\n",
@@ -244,12 +235,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "23c89be6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "outfile = f\"/home/cara/Documents/reddit_analyses/thread-size/Publication_Outputs/2_Thread_Size/tuning_outputs/class_weights.xlsx\"\n",
+    "outfile = f\"../../Publication_Outputs/2_Thread_Size/tuning_outputs/class_weights.xlsx\"\n",
     "\n",
     "with pd.ExcelWriter(outfile) as writer:\n",
     "    for sub, df in s2_cw_dfs.items():\n",
@@ -275,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "7df9a0f7",
    "metadata": {},
    "outputs": [],
@@ -283,7 +274,7 @@
     "s2_feat_dfs = {}\n",
     "sheet_name = \"feature_importances\"\n",
     "for subreddit in SUBREDDIT_LABELS:\n",
-    "    eval_filepath = f\"/home/cara/Documents/reddit_analyses/thread-size/Outputs/2_thread_size/{subreddit}/2_tuning/tuning_outputs.xlsx\"\n",
+    "    eval_filepath = f\"../../Outputs/2_thread_size/{subreddit}/2_tuning/tuning_outputs.xlsx\"\n",
     "    df = pd.read_excel(eval_filepath, sheet_name=sheet_name)\n",
     "    \n",
     "    # Ensure correct column names\n",
@@ -300,7 +291,7 @@
     "\n",
     "    s2_feat_dfs[subreddit] = df\n",
     "\n",
-    "outfile = f\"/home/cara/Documents/reddit_analyses/thread-size/Publication_Outputs/2_Thread_Size/tuning_outputs/feature_importances.xlsx\"\n",
+    "outfile = f\"../../Publication_Outputs/2_Thread_Size/tuning_outputs/feature_importances.xlsx\"\n",
     "\n",
     "with pd.ExcelWriter(outfile) as writer:\n",
     "    for sub, df in s2_feat_dfs.items():\n",
@@ -321,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "506329da",
    "metadata": {},
    "outputs": [],
@@ -329,7 +320,7 @@
     "hyperparam_dfs = {}\n",
     "sheet_name = \"hyperparams\"\n",
     "for subreddit in SUBREDDIT_LABELS:\n",
-    "    eval_filepath = f\"/home/cara/Documents/reddit_analyses/thread-size/Outputs/2_thread_size/{subreddit}/4_model/evaluation.xlsx\"\n",
+    "    eval_filepath = f\"../../Outputs/2_thread_size/{subreddit}/4_model/evaluation.xlsx\"\n",
     "    df = pd.read_excel(eval_filepath, sheet_name=sheet_name)\n",
     "    # Ensure correct column names\n",
     "    df.columns = [\"Parameter\", \"Value\", \"Features\"]\n",
@@ -361,7 +352,7 @@
     "    title = f\"{SUBREDDIT_LABELS[subreddit]} tuned thread size LightGBM hyperparameters by number of features.\"\n",
     "    full_latex = built_supp_mat_table(title, latex_str, caption)\n",
     "    # Save to file\n",
-    "    with open(f\"/home/cara/Documents/reddit_analyses/thread-size/Publication_Outputs/2_Thread_Size/tuning_outputs/{subreddit}_hparams.txt\", \"w\") as f:\n",
+    "    with open(f\"../../Publication_Outputs/2_Thread_Size/tuning_outputs/{subreddit}_hparams.txt\", \"w\") as f:\n",
     "        f.write(full_latex)"
    ]
   },
