nicer latex tables

--- a/3_Graphs_Tables/make_tables.ipynb
+++ b/3_Graphs_Tables/make_tables.ipynb
@@ -15,25 +15,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c6735af9",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 96,
    "id": "f251f104",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/cara/anaconda3/envs/2stagemodel/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import ast\n",
     "import re\n",
-    "from make_outputs import format_label"
+    "from make_outputs import format_label, load_selected_models\n",
+    "from pathlib import Path"
    ]
   },
   {
@@ -52,44 +50,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "b2cffa09",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# want header - title - table_header - tabular - table_footer - caption - footer\n",
-    "\n",
-    "supp_mat_table = {\n",
-    "    \"header\": r\"\\paragraph*{S Table.}{\\bf \",\n",
-    "    \"table_header\":\n",
-    "r\"\"\"}\n",
-    "\\label{S-Table.}\n",
-    "\\begin{table}[!ht]\n",
-    "\\centering\"\"\",\n",
-    "    \"table_footer\":\n",
-    "r\"\"\"\n",
-    "\\end{table}\n",
-    "\"\"\",\n",
-    "    \"footer\":\n",
-    "r\"\"\"\n",
-    "\\FloatBarrier\n",
-    "\"\"\"\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 126,
    "id": "95b2fc7b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def built_supp_mat_table(title, tabular, caption):\n",
+    "\n",
+    "def clean_tabular(tabular):\n",
     "    tabular = tabular.replace(r\"\\\\\", r\"\\\\ \\hline\")\n",
     "    to_repl = [r'\\toprule', r'\\midrule', r'\\bottomrule']\n",
     "    for s in to_repl:\n",
     "        tabular = tabular.replace(s, \"\")\n",
-    "    return supp_mat_table[\"header\"] + title + supp_mat_table[\"table_header\"] + tabular + supp_mat_table[\"table_footer\"] + caption + supp_mat_table[\"footer\"]"
+    "    return tabular\n",
+    "        \n",
+    "def build_supp_table(title: str, tabular: str, caption: str, n=None) -> str:\n",
+    "    \"\"\"\n",
+    "    Build a supplementary-materials table:\n",
+    "\n",
+    "    \\paragraph*{SN Table.}{\\bf TITLE}\n",
+    "        \\label{SN-Table}\n",
+    "        \\begin{table}[!ht]\n",
+    "            \\centering\n",
+    "    LATEX_TABLE\n",
+    "        \\end{table}\n",
+    "    CAPTION\n",
+    "    \"\"\"\n",
+    "    if n is None:\n",
+    "        n=\"\"\n",
+    "    tabular = clean_tabular(tabular)\n",
+    "\n",
+    "    return (\n",
+    "        rf\"\\paragraph*{{S{n} Table.}}{{\\bf {title}}}\" \"\\n\"\n",
+    "        rf\"\\label{{S{n}-Table}}\" \"\\n\"\n",
+    "        r\"\\begin{table}[!ht]\" \"\\n\"\n",
+    "        r\"    \\centering\" \"\\n\"\n",
+    "        f\"{tabular}\\n\"\n",
+    "        r\"\\end{table}\" \"\\n\"\n",
+    "        f\"{caption}\"\n",
+    "    )\n",
+    "\n",
+    "def build_main_table(title, latex_table, caption, label):\n",
+    "    \"\"\"\n",
+    "    Construct a LaTeX table environment with consistent structure.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    title : str\n",
+    "        Title displayed in bold in the caption.\n",
+    "    latex_table : str\n",
+    "        The tabular environment as a LaTeX string.\n",
+    "    caption : str\n",
+    "        Additional caption text placed under the table.\n",
+    "    label : str\n",
+    "        Label name (without 'tab:').\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    str\n",
+    "        Full LaTeX table environment string.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Clean unwanted booktabs commands\n",
+    "    latex_table = clean_tabular(latex_table)\n",
+    "\n",
+    "    # Build final LaTeX table\n",
+    "    table = f\"\"\"\n",
+    "\\\\begin{{table}}[!ht]\n",
+    "\\\\centering\n",
+    "\\\\caption{{\\\\bf {title}}}\n",
+    "{latex_table}\n",
+    "\\\\begin{{flushleft}}{caption}\\\\end{{flushleft}}\n",
+    "\\\\label{{tab:{label}}}\n",
+    "\\\\end{{table}}\n",
+    "\"\"\"\n",
+    "\n",
+    "    return table.strip()\n"
    ]
   },
   {
@@ -312,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "id": "506329da",
    "metadata": {},
    "outputs": [],
@@ -358,8 +393,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "1952eec2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eval_filepath = f\"../../Publication_Outputs/2_Thread_Size/metrics/table_metrics.xlsx\"\n",
+    "mcc_dfs = []\n",
+    "for sub in SUBREDDIT_LABELS:\n",
+    "\n",
+    "    df = pd.read_excel(eval_filepath, sheet_name=f\"{sub}_test\").rename(columns={\"n_feats\": \"Features\"})\n",
+    "\n",
+    "    mcc_df = df[['Features']].copy()\n",
+    "    mcc_df[\"MCC\"] = df[\"MCC\"].map(lambda x: f\"{x:.4f}\") + \" \" + df[\"MCC CI\"].astype(str)\n",
+    "\n",
+    "    mcc_df = mcc_df.set_index(\"Features\")\n",
+    "\n",
+    "    mcc_dfs.append(mcc_df[['MCC']].rename(columns={\"MCC\": f\"{SUBREDDIT_LABELS[sub]}\"}))\n",
+    "\n",
+    "mcc_df = pd.concat(mcc_dfs, axis=1).reset_index()\n",
+    "\n",
+    "latex_str = mcc_df.to_latex(\n",
+    "    index=False,                    # don’t print the row index\n",
+    "    header=True,\n",
+    "    float_format=\"%.4f\",\n",
+    "    column_format=\"|l|r|r|r|\",      # LaTeX alignment (1 left + 8 right)\n",
+    "    escape=True                    # so underscores in col names are not escaped weirdly\n",
+    ")\n",
+    "\n",
+    "caption = r\"Test-set MCC values (with 95\\% bootstrap confidence intervals) for the tuned thread-size classifiers across the three subreddits. Each row corresponds to a model trained using the top-$n$ features. Higher MCC indicates better discrimination between classes.\"\n",
+    "title = f\"Test-set MCC for the thread-size prediction models.\"\n",
+    "full_latex = built_supp_mat_table(title, latex_str, caption)\n",
+    "# Save to file\n",
+    "with open(f\"../../Publication_Outputs/2_Thread_Size/metrics/test_mccs.txt\", \"w\") as f:\n",
+    "    f.write(full_latex)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "dfe12dff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_532571/1231739216.py:14: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  mod_row['Subreddit'] = SUBREDDIT_LABELS[sub]\n",
+      "/tmp/ipykernel_532571/1231739216.py:14: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  mod_row['Subreddit'] = SUBREDDIT_LABELS[sub]\n",
+      "/tmp/ipykernel_532571/1231739216.py:15: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  mod_row['Features'] = s2_mods[sub]\n",
+      "/tmp/ipykernel_532571/1231739216.py:15: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  mod_row['Features'] = s2_mods[sub]\n",
+      "/tmp/ipykernel_532571/1231739216.py:14: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  mod_row['Subreddit'] = SUBREDDIT_LABELS[sub]\n",
+      "/tmp/ipykernel_532571/1231739216.py:14: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  mod_row['Subreddit'] = SUBREDDIT_LABELS[sub]\n",
+      "/tmp/ipykernel_532571/1231739216.py:15: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  mod_row['Features'] = s2_mods[sub]\n",
+      "/tmp/ipykernel_532571/1231739216.py:15: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  mod_row['Features'] = s2_mods[sub]\n",
+      "/tmp/ipykernel_532571/1231739216.py:14: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  mod_row['Subreddit'] = SUBREDDIT_LABELS[sub]\n",
+      "/tmp/ipykernel_532571/1231739216.py:14: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  mod_row['Subreddit'] = SUBREDDIT_LABELS[sub]\n",
+      "/tmp/ipykernel_532571/1231739216.py:15: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  mod_row['Features'] = s2_mods[sub]\n",
+      "/tmp/ipykernel_532571/1231739216.py:15: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  mod_row['Features'] = s2_mods[sub]\n"
+     ]
+    }
+   ],
+   "source": [
+    "s2_mods = load_selected_models(Path(\"../../Publication_Outputs/2_Thread_Size/s2_models.txt\"))\n",
+    "eval_filepath = f\"../../Publication_Outputs/2_Thread_Size/metrics/table_metrics.xlsx\"\n",
+    "rows = []\n",
+    "for sub in SUBREDDIT_LABELS:\n",
+    "\n",
+    "    df = pd.read_excel(eval_filepath, sheet_name=f\"{sub}_test\").rename(columns={\"n_feats\": \"Features\"})\n",
+    "    df = df.set_index(\"Features\")\n",
+    "    metric_cols = [c for c in df.columns if \"CI\" not in c]\n",
+    "    new_df = df[metric_cols].copy()\n",
+    "    for col in metric_cols:\n",
+    "        new_df[col] = df[col].map(lambda x: f\"{x:.4f}\") + \" \" + df[f\"{col} CI\"].astype(str)\n",
+    "    \n",
+    "    mod_row = new_df.iloc[s2_mods[sub],:]\n",
+    "    mod_row['Subreddit'] = SUBREDDIT_LABELS[sub]\n",
+    "    mod_row['Features'] = s2_mods[sub]\n",
+    "    rows.append(mod_row)\n",
+    "\n",
+    "df = pd.concat(rows, axis=1)\n",
+    "# --- Replace column headers with subreddit names ---\n",
+    "subreddit_names = df.loc[\"Subreddit\"].tolist()\n",
+    "df.columns = subreddit_names\n",
+    "\n",
+    "# --- Move 'Features' row to top ---\n",
+    "features_row = df.loc[\"Features\"].to_frame().T\n",
+    "\n",
+    "# Drop Subreddit + Features rows\n",
+    "df = df.drop([\"Subreddit\", \"Features\"])\n",
+    "\n",
+    "# Insert Features at top\n",
+    "df = pd.concat([features_row, df])\n",
+    "\n",
+    "\n",
+    "tabular = df.to_latex(\n",
+    "    index=True,                    # don’t print the row index\n",
+    "    header=True,\n",
+    "    float_format=\"%.4f\",\n",
+    "    column_format=\"|l|r|r|r|\",      # LaTeX alignment (1 left + 8 right)\n",
+    "    escape=True                    # so underscores in col names are not escaped weirdly\n",
+    ")\n",
+    "\n",
+    "caption = r\"The thread size model test set MCC, AUC, F1 score, balanced accuracy, and stalled, small, medium and large precision and recall scores with their corresponding 95\\% confidence intervals computed with 1000 bootstrap resamples.\"\n",
+    "title = f\"Test set performance of the selected thread size models for each subreddit\"\n",
+    "full_latex = build_main_table(title, tabular, caption, 's2-mods')\n",
+    "# Save to file\n",
+    "with open(f\"../../Publication_Outputs/2_Thread_Size/metrics/selected_mods.txt\", \"w\") as f:\n",
+    "    f.write(full_latex)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbf65ef8",
    "metadata": {},
    "outputs": [],
    "source": []
