--- a/3_Graphs_Tables/make_tables.ipynb
+++ b/3_Graphs_Tables/make_tables.ipynb
@@ -16,25 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "f251f104",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/cara/anaconda3/envs/2stagemodel/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import ast\n",
     "import re\n",
     "from make_outputs import format_label, load_selected_models\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "import os"
    ]
   },
   {
@@ -494,15 +486,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "5e896913",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "os.makedirs(\"../../Publication_Outputs/2_Thread_Size/tuning_outputs/\", exist_ok=True)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 25,
    "id": "506329da",
    "metadata": {},
    "outputs": [],
@@ -540,7 +534,7 @@
     "    \n",
     "    caption = f\"Optimal LightGBM tree hyperparameters selected via cross-validated Optuna/TPE search for each number of features for {SUBREDDIT_LABELS[subreddit]}. Values represent cross-fold aggregated hyperparameters, using the mode for integer parameters and the mean for continuous parameters. These configurations were used for the final thread size model evaluation.\"\n",
     "    title = f\"{SUBREDDIT_LABELS[subreddit]} tuned thread size LightGBM hyperparameters by number of features.\"\n",
-    "    full_latex = built_supp_mat_table(title, latex_str, caption)\n",
+    "    full_latex = build_supp_table(title, latex_str, caption)\n",
     "    # Save to file\n",
     "    with open(f\"../../Publication_Outputs/2_Thread_Size/tuning_outputs/{subreddit}_hparams.txt\", \"w\") as f:\n",
     "        f.write(full_latex)"
@@ -548,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 26,
    "id": "1952eec2",
    "metadata": {},
    "outputs": [],
@@ -578,7 +572,7 @@
     "\n",
     "caption = r\"Test-set MCC values (with 95\\% bootstrap confidence intervals) for the tuned thread-size classifiers across the three subreddits. Each row corresponds to a model trained using the top-$n$ features. Higher MCC indicates better discrimination between classes.\"\n",
     "title = f\"Test-set MCC for the thread-size prediction models.\"\n",
-    "full_latex = built_supp_mat_table(title, latex_str, caption)\n",
+    "full_latex = build_supp_table(title, latex_str, caption)\n",
     "# Save to file\n",
     "with open(f\"../../Publication_Outputs/2_Thread_Size/metrics/test_mccs.txt\", \"w\") as f:\n",
     "    f.write(full_latex)"
@@ -586,26 +580,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "dfe12dff",
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '../../Publication_Outputs/2_Thread_Size/s2_models.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m s2_mods = \u001b[43mload_selected_models\u001b[49m\u001b[43m(\u001b[49m\u001b[43mPath\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m../../Publication_Outputs/2_Thread_Size/s2_models.txt\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      2\u001b[39m eval_filepath = \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m../../Publication_Outputs/2_Thread_Size/metrics/table_metrics.xlsx\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      3\u001b[39m rows = []\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/reddit_analyses/thread-size/Scripts/3_Graphs_Tables/make_outputs.py:296\u001b[39m, in \u001b[36mload_selected_models\u001b[39m\u001b[34m(path)\u001b[39m\n\u001b[32m    294\u001b[39m \u001b[38;5;66;03m# Fallback: simple line-parsing\u001b[39;00m\n\u001b[32m    295\u001b[39m selected: Dict[\u001b[38;5;28mstr\u001b[39m, \u001b[38;5;28mint\u001b[39m] = {}\n\u001b[32m--> \u001b[39m\u001b[32m296\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[43mpath\u001b[49m\u001b[43m.\u001b[49m\u001b[43mopen\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m    297\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m f:\n\u001b[32m    298\u001b[39m         parts = [p.strip() \u001b[38;5;28;01mfor\u001b[39;00m p \u001b[38;5;129;01min\u001b[39;00m line.split(\u001b[33m\"\u001b[39m\u001b[33m,\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;28;01mif\u001b[39;00m p.strip()]\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/anaconda3/envs/2stagemodel/lib/python3.11/pathlib.py:1044\u001b[39m, in \u001b[36mPath.open\u001b[39m\u001b[34m(self, mode, buffering, encoding, errors, newline)\u001b[39m\n\u001b[32m   1042\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33mb\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m mode:\n\u001b[32m   1043\u001b[39m     encoding = io.text_encoding(encoding)\n\u001b[32m-> \u001b[39m\u001b[32m1044\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m io.open(\u001b[38;5;28mself\u001b[39m, mode, buffering, encoding, errors, newline)\n",
-      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] No such file or directory: '../../Publication_Outputs/2_Thread_Size/s2_models.txt'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_185827/2292598750.py:14: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  mod_row['Subreddit'] = SUBREDDIT_LABELS[sub]\n",
+      "/tmp/ipykernel_185827/2292598750.py:14: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  mod_row['Subreddit'] = SUBREDDIT_LABELS[sub]\n",
+      "/tmp/ipykernel_185827/2292598750.py:15: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  mod_row['Features'] = s2_mods[sub]\n",
+      "/tmp/ipykernel_185827/2292598750.py:15: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  mod_row['Features'] = s2_mods[sub]\n",
+      "/tmp/ipykernel_185827/2292598750.py:14: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  mod_row['Subreddit'] = SUBREDDIT_LABELS[sub]\n",
+      "/tmp/ipykernel_185827/2292598750.py:14: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  mod_row['Subreddit'] = SUBREDDIT_LABELS[sub]\n",
+      "/tmp/ipykernel_185827/2292598750.py:15: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  mod_row['Features'] = s2_mods[sub]\n",
+      "/tmp/ipykernel_185827/2292598750.py:15: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  mod_row['Features'] = s2_mods[sub]\n",
+      "/tmp/ipykernel_185827/2292598750.py:14: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  mod_row['Subreddit'] = SUBREDDIT_LABELS[sub]\n",
+      "/tmp/ipykernel_185827/2292598750.py:14: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  mod_row['Subreddit'] = SUBREDDIT_LABELS[sub]\n",
+      "/tmp/ipykernel_185827/2292598750.py:15: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  mod_row['Features'] = s2_mods[sub]\n",
+      "/tmp/ipykernel_185827/2292598750.py:15: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  mod_row['Features'] = s2_mods[sub]\n"
      ]
     }
    ],
    "source": [
-    "s2_mods = load_selected_models(Path(\"../../Publication_Outputs/2_Thread_Size/s2_models.txt\"))\n",
+    "s2_mods = load_selected_models(Path(\"../../Publication_Outputs/2_Thread_Size/s2_mods.txt\"))\n",
     "eval_filepath = f\"../../Publication_Outputs/2_Thread_Size/metrics/table_metrics.xlsx\"\n",
     "rows = []\n",
     "for sub in SUBREDDIT_LABELS:\n",
